--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,6 @@
 <resources>
-    <color name="primary">#2E7D32</color>
-    <color name="surface">#F6F6F6</color>
+    <color name="primary">#81C784</color>
+    <color name="surface">#121212</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
 </resources>
